--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "roblox-donation-proxy",
+  "name": "roblox-gamepass-proxy",
   "version": "1.0.0",
-  "description": "Proxy to fetch Roblox user gamepasses",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "node-cache": "^5.1.2",
-    "node-fetch": "^2.6.7"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
